force-app/main/default/objects/Account/fields/PAN__c.field-meta.xml
<CustomField>
    <fullName>PAN__c</fullName>
    <label>PAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>