force-app/main/default/objects/Account/fields/RiskProfile__c.field-meta.xml
<CustomField>
    <fullName>RiskProfile__c</fullName>
    <label>Risk Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conservative</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Aggressive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>