force-app/main/default/objects/Account/fields/RM_Owner__c.field-meta.xml
<CustomField>
    <fullName>RM_Owner__c</fullName>
    <label>RM Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>